fixed header visibility

--- a/index.css
+++ b/index.css
@@ -122,7 +122,6 @@ input::-webkit-inner-spin-button {
 }
 .rdg-cell:has(.rdg-header) {
   z-index: 40 !important;
-  background: transparent !important;
 }
 .rdg-cell:has(.rdg-track) {
   z-index: 90 !important;
